--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
             <!-- links -->
             <ul>
                 <li class="listiteams"><a class="list" href="#homecontents">Home</a></li>
-                <li class="listiteams"><a class="list" href="#about">About</a></li>
+                <li class="listiteams"><a class="list" href="#about">About me</a></li>
                 <li class="listiteams"><a class="list" href="#skill">Skills</a></li>
-                <li class="listiteams"><a class="list" href="#contact">Contacts</a></li>
+                <li class="listiteams"><a class="list" href="#contact">Contactss</a></li>
             </ul>
         </nav>
         <!-- home -->
